# social-auto-upload

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  CLI.md  DESIGN.md  Dockerfile  Dockerfile.flask  LICENSE  READEME.md  README.MD  README.md  __init__.py  accounts.example.yaml  accounts.yaml  ai_config.example.yaml  ai_module.py  api.py  app.py  clean_html.py  cli_main.py  conf.example.py  conf.py  conftest.py  database.db  docker-compose.yml  docker-entrypoint.sh  export_douyin_cookie.sh  gui.py  login.py  pyproject.toml  refresh-test-output.txt  requirements.txt  run.py  sauModify.md  sau_backend.py  (+17 more)
ai/: __init__.py  manager.py
ai-worker/: Dockerfile  database.py  main.py  models.py  pyproject.toml  requirements.txt
ai-worker/video_factory/: editor_ffmpeg.py  generator_script.py  generator_voice.py
backend/: .env.example  Dockerfile  package.json  tsconfig.json
bilibili_uploader/: main.py
cli/: __init__.py  dispatchers.py  main.py  models.py  parser.py  utils.py
data/: info.json  social_media.db  video_list.json
db/: createTable.py  runtime_config.json
doc/: README.MD
docs/: CLI.md  VALUE-UPGRADE.md  WSL-USER-GUIDE.md  WSL-X11-COOKIE-RECOVERY.md  agent-bootstrap.md  install.md  legacy-web.md  skill-distribution.md  update.md  web-shell.md
douyin_uploader/: main.py
examples/: get_baijiahao_cookie.py  get_bilibili_cookie.py  get_douyin_cookie.py  get_kuaishou_cookie.py  get_tencent_cookie.py  get_tk_cookie.py  get_xhs_cookie.py  get_xiaohongshu_cookie.py  test_content_extract.py  upload_to_douyin.py  upload_to_kuaishou.py  upload_video_to_baijiahao.py  upload_video_to_bilibili.py  upload_video_to_douyin.py  upload_video_to_kuaishou.py  upload_video_to_tencent.py  upload_video_to_tencent_video.py  upload_video_to_tiktok.py  upload_video_to_xhs.py  upload_video_to_xiaohongshu.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
img/: a1.txt
legacy/: sau_backend.py
materials/: __init__.py  manager.py  models.py
memory/: phase2-account-manager-backend.md  phase3-trend-engine.md
myUtils/: auth.py  browserSession.py  login.py  postVideo.py  screenshot_manager.py
openspec/: config.yaml
routes/: ai.py
sau_backend/: README.md  app.py  conf.example.py  conf.py  requirements.txt  sau_backend.py
sau_frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js
sau_web/: start.sh
scripts/: build_sidecar.py  diagnose_playwright.py  restore_bilibili_cookie.sh  run_backend_dev.ps1  run_backend_dev.sh  run_frontend_dev.ps1  run_frontend_dev.sh
tencent_uploader/: main.py
tests/: conftest.py  test_ai_stream_multimessage.py  test_bilibili_runtime.py  test_douyin_declaration.py  test_phase_5_to_8.py  test_sau_backend_login.py  test_sau_bilibili_cli.py  test_sau_bilibili_e2e.py  test_sau_browser_cli.py  test_sau_tencent_cli.py  test_sau_web_account_groups.py  test_sau_web_upload.py  test_security_fixes.py  test_stream_openrouter.py  test_strict_exceptions.py  test_structured_log.py  test_taobao_guanghe_login.py  test_tencent_note_implementation.py  (+5 more)
(+580 files in other folders)
