[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "social-auto-upload"
version = "0.1.0"
description = "Social media auto uploader"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "biliup>=0.4.098",
  "loguru==0.7.3",
  "opencv-python>=4.13.0.92",
  "patchright==1.58.2",
  "Pillow>=10.2.0",
  "PyYAML>=6.0.2",
  "qrcode==8.2",
  "requests==2.32.3",
  "segno>=1.6.6",
]

[project.scripts]
sau = "sau_cli:main"

[project.optional-dependencies]
web = [
  "Flask[async]==3.1.1",
  "aiohttp>=3.9.5",
  "aiohttp-cors>=0.8.1",
  "flask-cors==6.0.0",
  "websocket-client>=1.8.0",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli_main", "conf", "sau_cli"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cli*", "uploader*", "utils*", "myUtils*"]

[tool.setuptools.package-data]
utils = ["stealth.min.js"]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=0.24",
  "social-auto-upload[web]",
  "black>=24.0.0",
  "isort>=5.13.0",
  "ruff>=0.4.0",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["cli", "uploader", "utils"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["cli", "uploader", "utils"]
